--- a/web/common/testSearchForm.ejs
+++ b/web/common/testSearchForm.ejs
@@ -25,6 +25,7 @@
           <option value="7" <%=setSelect(7, a)%>>50% CLIP 50% OpenAI description</option>
           <option value="8" <%=setSelect(8, a)%>>80% CLIP 20% Phi-3 description</option>
           <option value="9" <%=setSelect(9, a)%>>50% CLIP 50% Phi-3 description</option>
+          <option value="10" <%=setSelect(10, a)%>>50% CLIP 30% Phi-3 description 20% NLA metadata</option>
         </select>
          
         <P>
@@ -40,6 +41,7 @@
           <option value="7" <%=setSelect(7, b)%>>50% CLIP 50% OpenAI description</option>
           <option value="8" <%=setSelect(8, b)%>>80% CLIP 20% Phi-3 description</option>
           <option value="9" <%=setSelect(9, b)%>>50% CLIP 50% Phi-3 description</option>
+          <option value="10" <%=setSelect(10, b)%>>50% CLIP 30% Phi-3 description 20% NLA metadata</option>
         </select>
         </P>
       </td>
