--- a/web/static/style/css.css
+++ b/web/static/style/css.css
@@ -1,2 +1,3 @@
 .indent {margin-left:1em}
 .medSizeImage {max-width:350px;max-height:350px;float:left;width:350px;margin-right:10px;margin-bottom: 10px}
+.smallSizeImage {max-width:200px;max-height:200px;width:200px;margin-right:5px;margin-bottom: 5px}
