--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -4,57 +4,96 @@
 
   <H1>Thank you for helping us evaluate image search</H1>
 
-  <H2>Background</H2>
   <div class="indent">
+    <H3>What is this?</H3>
+
       <P>New semantic searching techniques which use descriptions and images directly offer better ways to find images, even those with little or no 
         descriptive metadata.  But there are so many options and knobs to tweak that we need human judgement to reveal the better options.      
       </P>
       <P>By evaluating the quality of image search results produced using some of these techniques, you'll help us produce a better
-        image search engine for the Australia public.  So, thanks in advance!
+        image search engine for the Australia public, allowing everyone to find photos, drawings, cartoons, posters and art work much
+        easier than is currently possible amongst the huge haystacks of NLA images.  
+      </P>
+      <P>
+        So, on behalf of future searchers, thanks in advance!
       </P>
 
       <H3>How does it work?</H3>
-      <P>You'll be shown an endless series of searches.  For each search, two methods are chosen at random to produce the search
-        results: the results from each method are shown in a column.  You are asked to choose which column has the best results.
+      <P>We ask you to perform two sets of evaluations:</P>
+      <OL>
+        <LI>You'll be shown about <B>50 search results</B>.   For each search, two different approaches are chosen at random to produce the search
+        results: the results from each method are shown in their own column.  You are asked to choose which column has the most relevant
+        results in the best order.
+        </LI>
+        <LI>You'll be shown about <B>30 <I>similarity</I> searches</B>: 30 random images have been chosen, and for each, two different approaches
+           are chosen at random to find the most similar images: the results from each method are shown in their own column. 
+            You are asked to choose which column has the most similar images.</LI>
+      </OL>
       </P>
-      <P>Please evaluate as many or as few search results as you want.</P>
+      <P>Please perform as many or as few evaluations as you want - all evaluations will help us. If you tell us who you are (below), 
+        we'll set a cookie in your browser to allow you to continue evaluating later if you don't complete both evaluation sets.
+        If you provide an email, we'll send you a copy of the evaluation results.
+      </P>
+      <P>At the end of your evaluation session, we'll show you a link to a proof-of-concept image search on over 200,000 NLA images which
+        we hope you'll find fascinating and useful!
+      </P>
 
-      <H3>Who's 'us'</H3>
+      <H3>Who's 'us'?</H3>
       <P>
-          This web site has been created by Francis Crimmins and Kent Fitch.  Contact us for more information.
+          This evaluation has been created by Francis Crimmins and Kent Fitch from NLA Digital's Secret Underground Collective - 
+          contact us for more information and to share your ideas.
       </P>
       
       <% if (optionalUserIdentifier) {%>
         <H3>Welcome back, <%=optionalUserIdentifier%>.</H3>
         <P>The optional user identifier you chose has been retained as a cookie.
-        If you wish remove this user identifier from this site, just clear your cookies for this site in your browser.
-        </P
+        If you wish remove this user identifier from this site, just clear your cookies for this site in your browser or click 
+        this button:
+
+          <FORM action="/" method="post">
+            <input type="submit" value="Clear cookies for this page"/>
+          </FORM>
+
+      </P>
       <%}
        else {%>
         <H3>Do you want to tell us who you are?</H3>
         <P>It may be helpful if we can correlate evaluations from the same person, or, in very rare cases, ask you
           for information about some of your evaluations (which of course, you can totally ignore). So, if you
           don't mind, we'd appreciate it if you'd enter your name or email address, or, if you want to remain
-          anonymous but help us correlate evaluations, enter a random name of your choosing.
+          anonymous but help us correlate evaluations, enter a random name of your choosing.  If you provide an NLA
+          email address, we'll send you a copy of the evaluation results in a few weeks.
         </P>
-        <P>Again, this is completely optional, so feel free to skip.
+        <P>Again, tell us who you are is completely optional, so feel free to skip.
         </P>
-        <P>
+        <div  style="margin-left:3em;padding:15px;border:1px solid #999999;width:60em">
+
           <FORM action="/" method="post">
-            <label>Sure - track my evaluations using this real name, email address, or made-up name:</label>
+            <label>Track my evaluations using this real name, NLA email address, or made-up name:</label>
             <input type="text" name="optionalUserIdentifier" size="20"/>
             <input type="submit" value="Track me!"/>
           </FORM>
-        </P>
+        </div>
       <%}%>
       </P>
-  </div>
 
+    <% if (typeof evaluationProgress === 'undefined') {%>
+      <H3>Let's begin!</H3>
+      <div>
+          <FORM action="/evaluate" method="post">
+            <center><input type="submit" value="Show me the first result"/></center>
+          </FORM>
+      </div> 
 
-  <div>
-      <FORM action="/search" method="post">
-        <center><input type="submit" value="Show me the first result"/></center>
-      </FORM>
+    <%}
+     else {%>
+      <H3>Let's continue!</H3>
+      <div>
+        <FORM action="/evaluate" method="post">
+          <center><input type="submit" value="Resume evaluations"/></center>
+        </FORM>
+      </div>
+    <%}%>
   </div>
 </div>
 
