--- a/web/views/evalSimilarity.ejs
+++ b/web/views/evalSimilarity.ejs
@@ -61,7 +61,7 @@ function genClass(docs) {
           <button id="a1" class="<%=genClass(aRes.docs)%>" style="background-color: rgba(135, 206, 250, 0.308)">Marginally better</button>
         </TH>
         <TH>&nbsp;<BR/>
-          <button id="abx" class="eb" style="background-color:#dddddd">About the same</button>
+          <button id="abx" class="eb" style="background-color:#dddddd">No preference</button>
         </TH>
         <TH  width="47%">
           Set B<BR/>
@@ -92,7 +92,7 @@ function genClass(docs) {
           <button id="a1x" class="eb" style="background-color: rgba(135, 206, 250, 0.308)">Marginally better</button>
         </TH>
         <TH>&nbsp;<BR/>
-          <button id="abx" class="eb" style="background-color:#dddddd">About the same</button>
+          <button id="abx" class="eb" style="background-color:#dddddd">No preference</button>
         </TH>
         <TH  width="45%">
           Set B<BR/>
