--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -64,7 +64,7 @@
           anonymous but help us correlate evaluations, enter a random name of your choosing.  If you provide an NLA
           email address, we'll send you a copy of the evaluation results in a few weeks.
         </P>
-        <P>Again, tell us who you are is completely optional, so feel free to skip.
+        <P>Again, telling us who you are is completely optional, so feel free to skip.
         </P>
         <div  style="margin-left:3em;padding:15px;border:1px solid #999999;width:60em">
 
