--- a/web/common/header.ejs
+++ b/web/common/header.ejs
@@ -21,8 +21,8 @@
 
     </head>
     <body>
-    <div style="float:right;font-size:90%;margin-top:0.8em;margin-right:1em"><a href='/'>Home</a> </div>
-    <H1 class='banner'><a href="/" style='text-decoration:none;color:#805C74'>NLA Image Search Comparison Data Gatherer</a></H1>
+    <div style="float:right;font-size:110%;margin-top:0.8em;margin-right:1em"><a href='/'>Home</a> </div>
+    <H1 class='banner'><a href="/" style='text-decoration:none;color:#275014'>NLA Image Search Comparison Data Gatherer</a></H1>
     <div class="content">
 
 
