--- a/web/static/style/css.css
+++ b/web/static/style/css.css
@@ -2,5 +2,6 @@
 .medSizeImage {max-width:350px;max-height:350px;float:left;width:350px;margin-right:10px;margin-bottom: 10px}
 .smallSizeImage {max-width:200px;max-height:200px;width:200px;margin-right:5px;margin-bottom: 5px}
 
-.eb {padding:8px;border-radius: 4px; border:none; text-align:center;text-decoration: none; display:inline-block;cursor:pointer}
+.eb {padding:8px;border-radius: 4px; border:none; text-align:center;text-decoration: none; cursor:pointer;width:10em;display:inline-block;visibility:hidden}
 .invisibleButton{ display:none} 
+body {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif}
