--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -7,8 +7,13 @@
   <div class="indent">
     <H3>What is this?</H3>
 
-      <P>New semantic searching techniques which use descriptions and images directly offer better ways to find images, even those with little or no 
-        descriptive metadata.  But there are so many options and knobs to tweak that we need human judgement to reveal the better options.      
+      <P>New <a href="https://en.wikipedia.org/wiki/Semantic_search">semantic searching</a> 
+        techniques which allow images to be found based on the semantic similarity between a
+        query and an image's contents rather than simple keyword matching between a query
+        and descriptive metadata provide better ways to find images, even
+        those with little or no descriptive metadata.  
+        But there are so many options and knobs to tweak that we need human judgement to 
+        reveal the better options.      
       </P>
       <P>By evaluating the quality of image search results produced using some of these techniques, you'll help us produce a better
         image search engine for the Australia public, allowing everyone to find photos, drawings, cartoons, posters and art work much
@@ -30,9 +35,15 @@
             You are asked to choose which column has the most similar images.</LI>
       </OL>
       </P>
-      <P>Please perform as many or as few evaluations as you want - all evaluations will help us. If you tell us who you are (below), 
-        we'll set a cookie in your browser to allow you to continue evaluating later if you don't complete both evaluation sets.
+      <P>Please perform as many or as few evaluations as you want - all evaluations will help us. 
+        If you tell us who you are (below), 
+        we'll set a cookie in your browser to allow you to continue evaluating later if you don't 
+        complete both evaluation sets in one go.
         If you provide an email, we'll send you a copy of the evaluation results.
+      </P>
+      <P>This evaluation site uses cookies and javascript, so in the unlikely event you've disabled
+        them for NLA sites, please enabled them now.  Also, please don't use the back button - once 
+        you've evaluated a result, pressing "back" won't "undo" that evaluation.
       </P>
       <P>At the end of your evaluation session, we'll show you a link to a proof-of-concept image search on over 200,000 NLA images which
         we hope you'll find fascinating and useful!
@@ -41,7 +52,8 @@
       <H3>Who's 'us'?</H3>
       <P>
           This evaluation has been created by Francis Crimmins and Kent Fitch from NLA Digital's Secret Underground Collective - 
-          contact us for more information and to share your ideas.
+          contact us for more information and to share your ideas.  Candace valliantly do all she could
+          to remediate the <i>programmer-chic</i> of this evaluation site.
       </P>
       
       <% if (optionalUserIdentifier) {%>
