more Candace UI, bug fixes, change to phi 3.5

--- a/web/common/header.ejs
+++ b/web/common/header.ejs
@@ -22,7 +22,8 @@
     </head>
     <body>
     <div style="float:right;font-size:110%;margin-top:0.8em;margin-right:1em"><a href='/'>Home</a> </div>
-    <H1 class='banner'><a href="/" style='text-decoration:none;color:#275014'>NLA Image Search Comparison Data Gatherer</a></H1>
+    <center><H1 class='banner'><a href="/" style='text-decoration:none;color:#275014'>NLA Image
+         Search Comparison Data Gatherer</a></H1></center>
     <div class="content">
 
 
