--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -1,10 +1,10 @@
 <%- include('../common/header') ; -%>
 
+
 <div class="indent">
 
-  <H1>Thank you for helping us evaluate image search</H1>
-
-  <div class="indent">
+  <div style="max-width:70em;margin-left: auto;margin-right: auto">
+    <center><H1>Thank you for helping us evaluate image search</H1></center>
     <H3>What is this?</H3>
 
       <P>New <a href="https://en.wikipedia.org/wiki/Semantic_search">semantic searching</a> 
@@ -35,9 +35,9 @@
             You are asked to choose which column has the most similar images.</LI>
       </OL>
       </P>
-      <P>Please perform as many or as few evaluations as you want - all evaluations will help us. 
-        If you tell us who you are (below), 
-        we'll set a cookie in your browser to allow you to continue evaluating later if you don't 
+      <P>Please perform as many or as few evaluations as you want - every evaluation helps us.  
+         It will take you about 15 minutes to complete both sets of evaluations. 
+        If you tell us who you are (below), we'll set a cookie in your browser to allow you to continue evaluating later if you don't 
         complete both evaluation sets in one go.
         If you provide an email, we'll send you a copy of the evaluation results.
       </P>
