--- a/web/static/style/css.css
+++ b/web/static/style/css.css
@@ -5,3 +5,23 @@
 .eb {padding:8px;border-radius: 4px; border:none; text-align:center;text-decoration: none; cursor:pointer;width:10em;display:inline-block;visibility:hidden}
 .invisibleButton{ display:none} 
 body {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif}
+.wrapper {
+  width: 300px;
+}
+
+.progress-bar {
+  width: 100%;
+  background-color: #e0e0e0;
+  padding: 3px;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
+}
+
+.progress-bar-fill {
+  display: block;
+  height: 22px;
+  background-color: #659cef;
+  border-radius: 3px;
+  
+  transition: width 500ms ease-in-out;
+}
