--- a/web/common/header.ejs
+++ b/web/common/header.ejs
@@ -17,13 +17,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">      
 
-        <title>NLA Image Search Comparison Data Gatherer</title>
+        <title>NLA Image Search Evaluation</title>
 
     </head>
     <body>
     <div style="float:right;font-size:110%;margin-top:0.8em;margin-right:1em"><a href='/'>Home</a> </div>
-    <center><H1 class='banner'><a href="/" style='text-decoration:none;color:#275014'>NLA Image
-         Search Comparison Data Gatherer</a></H1></center>
+    <center><H1 class='banner'><a href="/" style='text-decoration:none;color:#275014'>NLA Image Search Evaluation</a></H1></center>
     <div class="content">
 
 
