--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -28,7 +28,7 @@
         complete both evaluation sets in one go.
       </P>
       <P>This evaluation site uses cookies and javascript, so in the unlikely event you've disabled
-        them for NLA sites, please enabled them now.  Also, please don't use the back button - once 
+        them for NLA sites, please enable them now.  Also, please don't use the back button - once 
         you've evaluated a result, pressing "back" won't "undo" that evaluation.
       </P>
 
