add clustering based on Francis' code

--- a/web/common/footer.ejs
+++ b/web/common/footer.ejs
@@ -1,4 +1,4 @@
 </div> <!-- end of content div -->
-<div style='font-size:50%'>v26Aug-17:02</div>
+<div style='font-size:50%'>v12Sep-noon</div>
 </body>
 </HTML>
