evaluations in progress

--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -16,7 +16,8 @@
       <OL>
         <LI>You will be shown a set of <B>39 searches</B>. For each search, two different approaches are chosen at random to produce the search
         results: the results from each method are shown in their own column.  You are asked to choose which column has the most relevant
-        results in the best order.
+        results in the best order. Sometimes, one of the randomly chosen methods will not retrieve any results to be shown - they'll always
+        be the less relevant, but you still have to choose the other results.
         </LI>
         <LI>You will then be shown <B>11 <I>similarity</I> searches</B>: 11 random images have been chosen, and for each, two different approaches
            are chosen at random to find the most similar images: the results from each method are shown in their own column. 
