--- a/web/views/showEvaluations.ejs
+++ b/web/views/showEvaluations.ejs
@@ -1,11 +1,23 @@
 <%- include('../common/header') ; -%>
 
+<style>
+
+
+
+
+
+
+
+</style>
 <div class="indent">
 
   <H3>Evaluation results</H3>
 
     <% 
  
+    let colours = ["8C8CEE","9898EF","A4A4F1","B1B1F2","BDBDF3","C9C9F5","D5D5F6","E2E2F7","EEEEF9", 
+                   "FFFFFF",
+                   "F9EEEE","F7E2E2","F6D5D5","F5C9C9","F3BDBD","F2B1B1","F1A4A4","EF9898","EE8C8C", "eb7c7c"] ;
     function genScore() {
       return {awin: 0, bwin: 0, ab: 0, anet: 0, bnet: 0, count: 0}
     }
@@ -30,36 +42,20 @@
       {id:12, notSelectable: true, desc: "Phi-3 description", sseq:-1}
     ] ;
 
-    const seqToSearchSet = [0, 1, 2, 3, 6, 8, 10, 11] ; // search sets used
+    //const seqToSearchSet = [0, 1, 2, 3, 6, 8, 10, 11] ; // search sets used
+    const seqToSearchSet =   [1, 3, 0, 2, 8, 6, 11, 10] ; // search sets used
 
     let searchScores = [] ;
     for (let i=0;i<8;i++) {
       let l = [] ;
       for (let j=0;j<8;j++) l.push(genScore()) ;
       searchScores.push(l) ;
-    }
- 
-    %>
-
-    <P>abSearchSets: </P>
-    <P><%= JSON.stringify(abSearchSets) %></P>
-
-    <P>search evals</P>
-    <OL>
-    <% for (let eval of imageEvals) {%>
-      <LI>
-      <%= JSON.stringify(eval) %>
-      </LI>
-    <%}%>
-    </OL>
-
-    <%
+    } 
  
     // build scores
     for (let eval of imageEvals) {
       
       let a = -1 ; let b = -1 ;
-
 
       if (eval.methodA < eval.methodB) {
         a = eval.methodA ;
@@ -75,13 +71,10 @@
       }
 
       let score = (eval.eval == "ab") ? 0 : Number(eval.eval.substring(1)) ;
-      console.log("score " + score + " a =" + a + " b=" + b) ;
-
+ 
       let scores = searchScores[searchSets[a].sseq][searchSets[b].sseq] ;
        
       scores.count++ ;
-
-      //  {awin: 0, bwin: 0, ab: 0, anet: 0, bnet: 0, count: 0}
 
       if (score == 0) scores.ab++ ;
       else {
@@ -95,12 +88,88 @@
           scores.bnet += score ;
           scores.anet -= score ;
         }
-      }
-         
+      }         
     }
        
     %>
 
+<H4>Search Evaluation, <%=imageEvals.length%> head-to-head contests</H4>
+
+<H5>Head-to-head win ratio</H5>
+<TABLE style="border:1px solid grey">
+
+  <TR valign="top">
+    <TH></TH>
+    <% for (let seq of seqToSearchSet) {%>
+      <TH style="width:6em"><%=searchSets[seq].desc%></TH>
+    <%}%>
+  </TR>
+
+  <% for (let r of seqToSearchSet) { %>
+    <TR valign="top">
+      <TD nowrap><B><%=searchSets[r].desc%></B></TD>
+
+      <%for (let c of seqToSearchSet) {
+         let s = searchScores[searchSets[r>c?c:r].sseq][searchSets[r>c?r:c].sseq] ; 
+         if (r > c) s = flipScore(s) ;
+        %>
+        
+          <% if (r != c) { 
+            
+            let winPerc = Math.round((s.awin  * 100) / (s.awin + s.bwin)) ;
+            let avDiff = (s.anet / s.count ).toFixed(2) ;
+
+            let color = 20 - Math.round(winPerc / (100 / 19)) -1  ;
+          %>
+          <TD style="background-color:#<%=colours[color]%>;"><B><center><%=winPerc%></center></B></TD>
+
+          <%}
+          else {%>
+              <TD></TD>
+         <%}%>
+     <%}%>
+    </TR>
+  <%}%>
+</TABLE>
+
+<H5>Head-to-head detail</H5>
+<TABLE border="1">
+
+  <TR valign="top">
+    <TH></TH>
+    <% for (let seq of seqToSearchSet) {%>
+      <TH><%=searchSets[seq].desc%></TH>
+    <%}%>
+  </TR>
+
+  <% for (let r of seqToSearchSet) { %>
+    <TR valign="top">
+      <TD nowrap><B><%=searchSets[r].desc%></B></TD>
+
+      <%for (let c of seqToSearchSet) {
+         let s = searchScores[searchSets[r>c?c:r].sseq][searchSets[r>c?r:c].sseq] ; 
+         if (r > c) s = flipScore(s) ;
+        %>
+        
+          <% if (r != c) { 
+            
+            let winPerc = Math.round(((s.awin + s.ab / 2) * 100) / s.count) ;
+            let avDiff = (s.anet / s.count ).toFixed(2) ;
+
+            let color = 20 - Math.round(winPerc / (100 / 19)) -1  ;
+          %>
+          <TD style="background-color:#<%=colours[color]%>;">winPerc: <%=winPerc%> avDiff: <%=avDiff%> col: <%= color %> <%=colours[color]%>;</TD>
+
+          <%}
+          else {%>
+              <TD></TD>
+         <%}%>
+     <%}%>
+    </TR>
+  <%}%>
+</TABLE>
+
+<H5>Detail</H5>
 <TABLE border="1">
   <TR valign="top">
     <TH></TH>
@@ -111,12 +180,11 @@
 
   <% for (let r of seqToSearchSet) { %>
     <TR valign="top">
-      <TD nowrap><%=searchSets[r].desc%></TD>
+      <TD nowrap><B><%=searchSets[r].desc%></B></TD>
 
       <%for (let c of seqToSearchSet) {
          let s = searchScores[searchSets[r>c?c:r].sseq][searchSets[r>c?r:c].sseq] ; 
          if (r > c) s = flipScore(s) ;
-        //let s = {r:r, c:c} ;
         %>
         <TD>
           <% if (r != c) { %>
@@ -126,12 +194,24 @@
 
         </TD>
      <%}%>
-
     </TR>
   <%}%>
 </TABLE>
 
 
+<P>abSearchSets</P>
+<P><%= JSON.stringify(abSearchSets) %></P>
+
+<P>Normalised Data</P>
+<OL>
+    <% for (let eval of imageEvals) {
+        if (true) { //((eval.methodA >= 10 ) && (eval.methodB >= 10 ) ) {
+      %>
+      <LI>
+      <%= JSON.stringify(eval) %>
+      </LI>
+    <%}}%>
+    </OL>
 
 </div>
 
